<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/messages_list_view"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:divider="@null"
        android:dividerHeight="0px"
        android:animationCache="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_empty_view"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#808080"
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/search_empty_text"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_empty_view"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#959595"
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/list_empty_view_text1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#959595"
            android:gravity="center"
            android:textSize="15dp"
            android:paddingTop="6dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:lineSpacingExtra="2dp"
            android:id="@+id/list_empty_view_text2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/group_list_empty_view"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_marginTop="60dp"
            android:src="@drawable/empty_groups_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="23dp"
            android:text="@string/EmptyGroupListHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#AAAAAA"
            android:gravity="center"
            android:textSize="14dp" />

        <TextView
            android:text="@string/EmptyGroupListTip"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:gravity="center"
            android:textSize="18dp"
            android:paddingTop="6dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:lineSpacingExtra="2dp" />

        <TextView
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/DiscoverGroup"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_button_bg"
            android:id="@+id/goto_discover_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/floating_states"
        android:src="@drawable/floating_pencil"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/floating_button"/>

</FrameLayout>
